gocd/gocd-server-deployment.yaml
# Source: gocd/templates/gocd-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gocd-server
  labels:
    app: gocd
    chart: "gocd-1.32.0"
    release: "gocd"
    heritage: "Helm"
    component: server
  annotations:
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gocd
      release: "gocd"
      component: server
  template:
    metadata:
      labels:
        app: gocd
        release: "gocd"
        component: server
      annotations:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 0
        fsGroup: 0
      serviceAccountName: gocd
      volumes:
        - name: config-vol
          configMap:
            name: gocd
        - name: goserver-vol
          persistentVolumeClaim:
            claimName: gocd-server
      containers:
        - name: gocd-server
          image: "gocd/gocd-server:v20.8.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8153
          livenessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /go/api/v1/health
              port: 8153
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 10
          volumeMounts:
            - name: config-vol
              mountPath: /preconfigure_server.sh
              subPath: preconfigure_server.sh
            - name: goserver-vol
              mountPath: /godata
              subPath: godata
            - name: goserver-vol
              mountPath: /home/go
              subPath: homego
            - name: goserver-vol
              mountPath: /docker-entrypoint.d
              subPath: scripts
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/bash
                  - /preconfigure_server.sh
          resources:
            {}
      restartPolicy: Always
---
